wire up CLI Measure evaluation, allow for individual subject test, new CLI tool parameter options